use IConfiguration to read AppSettings Conguration

--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridKey": "AppSettingsSendGridKey_1111",
+  "Auth": {
+    "SectretKey": "AppSettingsSectretKey_2222",
+    "PublicKey": "AppSettingsSendPublicKey3333"
+  }
 }
