--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -10,6 +10,7 @@
   "SendGridKey": "AppSettingsSendGridKey_1111",
   "Auth": {
     "SectretKey": "AppSettingsSectretKey_2222",
-    "PublicKey": "AppSettingsSendPublicKey3333"
+    "PublicKey": "AppSettingsSendPublicKey3333",
+    "PhoneNumber": "+126 21 456 000"
   }
 }
