Nested AppSettings  sections with AddConfiguration extension limitation

--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -12,5 +12,16 @@
     "SectretKey": "AppSettingsSectretKey_2222",
     "PublicKey": "AppSettingsSendPublicKey3333",
     "PhoneNumber": "+126 21 456 000"
+  },
+  "SocialLoginSettings" :{
+    "SocialLoginEnabled": true,
+    "FacebookLoginSettings" :{
+      "Key": "FacebookKey 1111",
+      "Value": "FacebookValue 1111"
+    },
+    "GoogleLoginSettings": {
+      "Key": "GoogleKey 2222",
+      "Value": "GoogleValue 2222"
+    }
   }
 }
