use GetConnectionString method

--- a/AppSettingsManager/appsettings.json
+++ b/AppSettingsManager/appsettings.json
@@ -13,9 +13,9 @@
     "PublicKey": "AppSettingsSendPublicKey3333",
     "PhoneNumber": "+126 21 456 000"
   },
-  "SocialLoginSettings" :{
+  "SocialLoginSettings": {
     "SocialLoginEnabled": true,
-    "FacebookLoginSettings" :{
+    "FacebookLoginSettings": {
       "Key": "FacebookKey 1111",
       "Value": "FacebookValue 1111"
     },
@@ -23,5 +23,8 @@
       "Key": "GoogleKey 2222",
       "Value": "GoogleValue 2222"
     }
+  },
+  "ConnectionStrings": {
+    "AppSettingsManagerDb": "db Connection String from AppSettings"
   }
 }
