use staging file

--- a/AppSettingsManager/appsettings.Development.json
+++ b/AppSettingsManager/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AppSettingsManagerDb": "db Connection String from AppSettings.Development"
+  },
+  "Auth": {
+    "PhoneNumber": "+126 21 456 000 from AppSettings.Development"
   }
 }
