use credentials from envirement variable from lauchSettings.json file

--- a/AppSettingsManager/AppSettingsManager.csproj
+++ b/AppSettingsManager/AppSettingsManager.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <UserSecretsId>2c8ecee6-6829-4e47-bb14-64760c3d59f5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
