--- a/AppSettingsManager/appsettings.Development.json
+++ b/AppSettingsManager/appsettings.Development.json
@@ -11,5 +11,6 @@
   },
   "Auth": {
     "PhoneNumber": "+126 21 456 000 from AppSettings.Development"
-  }
+  },
+  "SendGridKey": "AppSettingsSendGridKey 1111 from AppSettings.Development"
 }
