--- a/AppSettingsManager/appsettings.Staging.json
+++ b/AppSettingsManager/appsettings.Staging.json
@@ -4,5 +4,6 @@
   },
   "Auth": {
     "PhoneNumber": "+126 21 456 000 from AppSettings.Staging"
-  }
+  },
+  "SendGridKey": "AppSettingsSendGridKey 1111 from AppSettings.Staging"
 }
