--- a/AppSettingsManager/AppSettingsManager.csproj
+++ b/AppSettingsManager/AppSettingsManager.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.24" />
   </ItemGroup>
 
 </Project>
